--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,20 +1,27 @@
 security:
-    encoders:
-        AppBundle\Entity\User: bcrypt
     providers:
-        database_users:
-            entity: { class: AppBundle:User, property: email }
+        webservice:
+            id: AppBundle\Security\User\WebserviceUserProvider
+
+    encoders:
+        AppBundle\Entity\WebserviceUser: plaintext
+
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
         main:
             anonymous: ~
-            guard:
-                authenticators:
-                    - app.form_login_authenticator
+            provider: webservice
+            pattern: ^/
+            form_login:
+                check_path: login_check
+                login_path: login
+                default_target_path: landing
+                use_forward: true
             logout:
                 path: /logout
                 target: /
+            guard:
+                authenticators:
+                    - app.webservice_authenticator
