fix: access_control to pages

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,3 +24,8 @@ security:
             guard:
                 authenticators:
                     - app.webservice_authenticator
+    access_control:
+        - { path: ^/$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, role: ROLE_USER }
