--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -25,3 +25,5 @@ services:
     app.serialize:
         class: AppBundle\Service\Serialize
         public: true
+    app.logout.listener:
+        class: AppBundle\Listener\LogoutListener
